<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ProgressBar
        android:id="@+id/pb_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="335dp"
        android:layout_height="235dp"
        android:layout_marginTop="80dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="332dp"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_detail"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/thomas"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/iv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/thomas" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cv_profile_detail"
                android:layout_marginStart="140dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tv_location_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_detail"
                android:layout_marginStart="140dp"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="55dp"
                android:layout_below="@+id/tv_location_detail"
                android:layout_marginStart="140dp"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/follow_bg"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/followers" />

                <TextView
                    android:id="@+id/tv_following_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/_100"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/followers" />

                <TextView
                    android:id="@+id/tv_followers_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/_100"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <Button
                android:background="@color/main"
                android:layout_width="285dp"
                android:layout_height="55dp"
                android:layout_below="@+id/cv_profile_detail"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="22dp"
                android:text="@string/follow"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>